# Raygen

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: base_lighting.fs  base_lighting.vs  fog_lighting.fs  instancing_lighting.vs  normal.fs
examples/: CMakeLists.txt  alembic_modeling.cpp  mass_spring.cpp  mass_spring_parallel.cpp  obj_show.cpp  orbit_camera.cpp  parallel_computing.cpp  particles_3d.cpp  pbf_fluids.cpp  procedural_mesh_generation.cpp  sph_fluids.cpp
examples/alembic_examples/: CMakeLists.txt  alembic_animation.cpp  alembic_modeling.cpp
src/: CMakeLists.txt  orbit_camera.h  raygen_math.h  raygen_random.h
src/Raygen/: draw.h  file.h  geometry.h  input.h  parallel.h  particles.h  timer.h
src/Raygen/Camera/: orbit_camera.h
src/Raygen/Math/: math.h  random.h
src/Raygen/Type/: color.h  d2array.h  type.h
test/: CMakeLists.txt  color_test.cpp  polar_test.cpp
